--- a/pom.xml
+++ b/pom.xml
@@ -360,7 +360,7 @@
                         <prohibitLegacyUse>true</prohibitLegacyUse>
                         <licenseSets>
                             <licenseSet>
-                                <header>LICENSE_HEADER</header>
+                                <header>${directory.root}/LICENSE_HEADER</header>
                                 <excludes>
                                     <exclude>**/test/resources/**</exclude>
                                     <exclude>**/requirements.txt</exclude>
@@ -462,6 +462,11 @@
                         </pom>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.commonjava.maven.plugins</groupId>
+                    <artifactId>directory-maven-plugin</artifactId>
+                    <version>1.0</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -482,6 +487,22 @@
                             <goal>clean</goal>
                         </goals>
                         <phase>clean</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.commonjava.maven.plugins</groupId>
+                <artifactId>directory-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>directory-of-iginx</id>
+                        <goals>
+                            <goal>highest-basedir</goal>
+                        </goals>
+                        <phase>initialize</phase>
+                        <configuration>
+                            <property>directory.root</property>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
