--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -35,7 +35,7 @@ MongoDB_mock=127.0.0.1#27017#MongoDB#has_data=false
 Redis_mock=127.0.0.1#6379#Redis#has_data=false#is_read_only=false#timeout=5000
 FileSystem_mock=127.0.0.1#6667#FileSystem#dir=test/iginx_mn#dummy_dir=/path/to/your/data#iginx_port=6888#chunk_size_in_bytes=1048576#memory_pool_size=100#has_data=false#is_read_only=false
 MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root#meta_properties_path=../dataSource/relational/src/main/resources/mysql-meta-template.properties
-FileStore_mock=127.0.0.1#6667#Parquet#dir=test/iginx_mn#dummy_dir=/path/to/your/data#iginx_port=6888#has_data=false#is_read_only=false#write.buffer.size=1048576#close.flush=false
+FileStore_mock=127.0.0.1#6667#filestore#iginx_port=6888#has_data=false#is_read_only=false#data.root=data#data.config.write.buffer.size=104857600#data.config.write.buffer.timeout=0
 
 # class name for each DB
 IoTDB12_class=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage
