--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
             </dependency>
             <dependency>
                 <groupId>cn.edu.tsinghua</groupId>
+                <artifactId>filestore</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.edu.tsinghua</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>${project.version}</version>
             </dependency>
