--- a/.github/actions/dbWriter/action.yml
+++ b/.github/actions/dbWriter/action.yml
@@ -15,4 +15,4 @@ runs:
         - name: Write history data
           shell: bash
           run: |
-              mvn test -q -Dtest=${{ inputs.DB-name }}HistoryDataGenerator#${{ inputs.Test-Way }} -DfailIfNoTests=false -P-format
+              mvn test -Dtest=${{ inputs.DB-name }}HistoryDataGenerator#${{ inputs.Test-Way }} -DfailIfNoTests=false -P-format
