--- a/.github/workflows/case-regression.yml
+++ b/.github/workflows/case-regression.yml
@@ -70,7 +70,7 @@ jobs:
               if: always()
               shell: bash
               run: |
-                  mvn test -q -Dtest=MixClusterShowColumnsRegressionTest -DfailIfNoTests=false -P-format
+                  mvn test -Dtest=MixClusterShowColumnsRegressionTest -DfailIfNoTests=false -P-format
 
             - name: Show IGinX log
               if: always()
