--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -124,7 +124,7 @@ jobs:
             - name: Run Tests
               shell: bash
               run: |
-                  mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+                  mvn test -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
 
             - name: Show IGinX log
               if: always()
