--- a/.github/workflows/format-checker.yml
+++ b/.github/workflows/format-checker.yml
@@ -1,6 +1,11 @@
 name: Format
 
-on: [pull_request]
+on:
+    pull_request:
+        types:
+            - opened
+            - edited
+            - synchronize
 
 jobs:
     formatting:
@@ -19,3 +24,8 @@ jobs:
               shell: bash
               run: |
                   mvn clean license:check
+    title:
+        name: Validate PR title
+        runs-on: ubuntu-latest
+        steps:
+            - uses: amannn/action-semantic-pull-request@v5
