--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -27,7 +27,7 @@ on:
                 description: "The database to run the test on"
                 type: string
                 required: false
-                default: '["FileSystem", "IoTDB12", "InfluxDB", "PostgreSQL", "Redis", "MongoDB", "Parquet", "MySQL"]'
+                default: '["FileStore", "FileSystem", "IoTDB12", "InfluxDB", "PostgreSQL", "Redis", "MongoDB", "Parquet", "MySQL"]'
 
 jobs:
     Union-DB-Test:
@@ -110,7 +110,7 @@ jobs:
               if: always()
               shell: bash
               run: |
-                  if [[ "${{ matrix.DB-name }}" == "FileSystem" || "${{ matrix.DB-name }}" == "Parquet" ]]; then
+                  if [[ "${{ matrix.DB-name }}" == "FileStore" || "${{ matrix.DB-name }}" == "FileSystem" || "${{ matrix.DB-name }}" == "Parquet"  ]]; then
                       mvn test -Dtest=ExportFileIT -Dsurefire.failIfNoSpecifiedTests=false -P-format
                   else
                       mvn test -Dtest=ExportFileIT#checkExportByteStream -Dsurefire.failIfNoSpecifiedTests=false -P-format
