fix DB-CE for filestore

--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -204,6 +204,12 @@ runs:
               paths: conf/config.properties
               statements: s|^#storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#password=mysql#has_data=false#meta_properties_path=your-meta-properties-path|storageEngineList=127.0.0.1#3306#relational#engine=mysql#username=root#has_data=false#meta_properties_path=${{ steps.mysql-properties.outputs.path }}|g
 
+        - if: inputs.DB-name=='FileStore'
+          name: Run DB
+          shell: bash
+          run: |
+            cp -f "${GITHUB_WORKSPACE}/conf/config.properties" "${GITHUB_WORKSPACE}/conf/config.properties.bak"
+
         - if: inputs.DB-name == 'FileStore'
           name: Modify IGinX Config
           uses: ./.github/actions/edit
@@ -212,3 +218,8 @@ runs:
               statements: |
                   s/^#storageEngineList=127.0.0.1#6667#filestore/storageEngineList=127.0.0.1#6667#filestore/g
                   s/data.config.write.buffer.size=104857600/data.config.write.buffer.size=1048576/g
+                  s#dummy.root=dummy#dummy.root=test/mn#g
+                  s#data.root=data#data.root=test/iginx_mn#g
+                  s/chunk_size_in_bytes=1048576/chunk_size_in_bytes=8/g
+                  s/write.buffer.size=104857600/write.buffer.size=1048576/g
+                  s/client.connectPool.maxTotal=100/client.connectPool.maxTotal=2/g
