--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -33,13 +33,13 @@ inputs:
 runs:
     using: "composite" # Mandatory parameter
     steps:
-        - if: inputs.DB-name=='FileSystem' || inputs.DB-name=='Parquet'
+        - if: inputs.DB-name=='FileStore' || inputs.DB-name=='FileSystem' || inputs.DB-name=='Parquet'
           name: save config for FileSystem and Parquet
           shell: bash
           run: |
               cp -f "${{ inputs.Root-Dir-Path }}/conf/config.properties" "${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties"
 
-        - if: inputs.DB-name=='FileSystem' || inputs.DB-name=='Parquet'
+        - if: inputs.DB-name=='FileStore' || inputs.DB-name=='FileSystem' || inputs.DB-name=='Parquet'
           name: save config for FileSystem and Parquet
           shell: bash
           run: |
