--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -19,16 +19,16 @@ jobs:
     #        uses: ./.github/workflows/case-regression.yml
     #        with:
     #            metadata-matrix: '["zookeeper"]'
-    standalone-test:
-        uses: ./.github/workflows/standalone-test.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            db-matrix: '["FileStore"]'
-    standalone-test-pushdown:
-        uses: ./.github/workflows/standalone-test-pushdown.yml
-        with:
-            metadata-matrix: '["zookeeper"]'
-            db-matrix: '["FileStore"]'
+#    standalone-test:
+#        uses: ./.github/workflows/standalone-test.yml
+#        with:
+#            metadata-matrix: '["zookeeper"]'
+#            db-matrix: '["FileStore"]'
+#    standalone-test-pushdown:
+#        uses: ./.github/workflows/standalone-test-pushdown.yml
+#        with:
+#            metadata-matrix: '["zookeeper"]'
+#            db-matrix: '["FileStore"]'
     db-ce:
         uses: ./.github/workflows/DB-CE.yml
         with:
