--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -24,11 +24,11 @@ jobs:
 #        with:
 #            metadata-matrix: '["zookeeper"]'
 #            db-matrix: '["FileStore"]'
-#    standalone-test-pushdown:
-#        uses: ./.github/workflows/standalone-test-pushdown.yml
-#        with:
-#            metadata-matrix: '["zookeeper"]'
-#            db-matrix: '["FileStore"]'
+    standalone-test-pushdown:
+        uses: ./.github/workflows/standalone-test-pushdown.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+            db-matrix: '["FileStore", "PostgreSQL"]'
     db-ce:
         uses: ./.github/workflows/DB-CE.yml
         with:
